# klasp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  klasp.toml
.claude/: settings.json
.claude/hooks/: klasp-gate.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  pr-title.yml  release.yml
docs/: adopt.md  agent-surfaces.md  agentic-flow-receipts.md  conformance-matrix.md  cursor-assessment.md  design.md  output-schema.md  plugin-protocol.md  plugins.md  recipes.md  roadmap.md  security-scan.md  setup.md  surfaces.json
docs/audits/: README.md  go.md  monorepo.md  polyglot.md  python.md  rust.md  typescript.md
docs/program/01-comprehension/: cross-repo-map.md  klasp-dot-dev.md  klasp.md
docs/program/02-bugs/: klasp-bug-register.md
docs/program/03-audit/: klasp-findings.md
docs/program/04-ideation/: ideas.md
docs/program/05-plan/: master-plan.md
docs/program/07-closeout/: final-report.md
examples/klasp-plugin-agentic-flow/: Cargo.toml  README.md
examples/klasp-plugin-agentic-flow/src/: main.rs  receipt.rs  runner.rs
examples/klasp-plugin-agentic-flow/tests/: integration.rs
examples/klasp-plugin-pre-commit/: Cargo.toml  README.md
examples/klasp-plugin-pre-commit/src/: main.rs  protocol.rs  runner.rs
examples/klasp-plugin-pre-commit/tests/: integration.rs
klasp/: Cargo.toml
klasp-agents-aider/: Cargo.toml
klasp-agents-aider/src/: aider_conf.rs  lib.rs  surface.rs
klasp-agents-aider/tests/: aider_conf_install.rs
klasp-agents-claude/: Cargo.toml
klasp-agents-claude/src/: conflict.rs  hook_template.rs  lib.rs  settings.rs  surface.rs
klasp-agents-claude/tests/: conflict_detection.rs  settings_merge.rs  snapshot_hook_template.rs
klasp-agents-claude/tests/fixtures/: settings_with_fallow.json
klasp-agents-claude/tests/snapshots/: snapshot_hook_template__hook_script_v1.snap  snapshot_hook_template__hook_script_v7.snap
klasp-agents-codex/: Cargo.toml
klasp-agents-codex/src/: agents_md.rs  git_hooks.rs  lib.rs  surface.rs
klasp-agents-codex/tests/: agents_md_install.rs  git_hooks_install.rs
klasp-agents-codex/tests/fixtures/: agents_md_with_other_tool.md
klasp-agents-codex/tests/fixtures/githooks/: pre-commit-husky-v9.sh  pre-commit-lefthook.sh  pre-commit-user-bash.sh
klasp-core/: Cargo.toml  klasp.toml
klasp-core/src/: config.rs  error.rs  fs.rs  lib.rs  plugin.rs  plugin_disable.rs  protocol.rs  source.rs  surface.rs  trigger.rs  trigger_config.rs  verdict.rs  verdict_tests.rs
klasp-core/src/text/: managed_block.rs  mod.rs
klasp-core/tests/: audit_recipes_parse.rs
klasp/src/: cli.rs  fs_util.rs  git.rs  lib.rs  main.rs  registry.rs
klasp/src/adopt/: detect.rs  detect_agents.rs  detect_husky.rs  detect_lefthook.rs  detect_lint_staged.rs  detect_plain_hooks.rs  detect_pre_commit.rs  mod.rs  mode.rs  plan.rs  render.rs  writer.rs
klasp/src/cmd/: demo.rs  doctor.rs  gate.rs  init.rs  install.rs  mod.rs  plugins.rs  setup.rs  uninstall.rs
klasp/src/output/: json.rs  junit.rs  mod.rs  sarif.rs  terminal.rs
klasp/src/sources/: cargo.rs  fallow.rs  mod.rs  plugin.rs  pre_commit.rs  pytest.rs  recipe_util.rs  shell.rs
klasp/src/sources/cargo/: messages.rs  verdict.rs
klasp/src/sources/fallow/: json.rs
klasp/src/sources/pytest/: junit.rs  verdict.rs
klasp/tests/: aider_captured_session.rs  cargo_recipe.rs  codex_captured_session.rs  configurable_triggers.rs  demo_replay.rs  doctor.rs  fallow_recipe.rs  gate_flow.rs  init.rs  init_adopt.rs  install_claude_code.rs  install_codex_cli.rs  installed_hook_runs.rs  monorepo_discovery.rs  output_formats.rs  output_json.rs  parallel_exec.rs  plugin_protocol.rs  plugin_smoke.rs  plugin_smoke_agentic_flow.rs  plugins_subcommand.rs  pre_commit_recipe.rs  protocol_contract.rs  pytest_recipe.rs  recipe_dogfood.rs  setup.rs  v01_regression.rs
klasp/tests/common/: mod.rs
klasp/tests/fixtures/: claude_commit_hook.json  klasp-gate-v1.sh
klasp/tests/fixtures/captured_session/aider/: .aider.conf.yml  failing-commit-session.jsonl  failing.rs
klasp/tests/fixtures/cargo/: check-fail.stdout  check-pass.stdout  clippy-fail.stdout  test-fail.stdout  test-pass.stdout  version.stdout
klasp/tests/fixtures/demo/: claude-feedback-loop-missing-ref.jsonl  claude-feedback-loop.jsonl
klasp/tests/fixtures/fallow/: 1x-version.stdout  2x-fail.json  2x-pass.json  2x-version.stdout  2x-warn.json
klasp/tests/fixtures/output/: junit_basic.xml  sarif_basic.json
klasp/tests/fixtures/output_json/: gate-fail-with-findings.json  gate-pass-empty.json  gate-warn-mixed.json
klasp/tests/fixtures/plugin/: klasp-plugin-fixture  klasp-plugin-mock-crashing  klasp-plugin-mock-env-check  klasp-plugin-mock-failing  klasp-plugin-mock-future-version  klasp-plugin-mock-malformed  klasp-plugin-mock-passing  klasp-plugin-mock-slow
klasp/tests/fixtures/pre_commit/: 3x-fail.stdout  3x-pass.stdout  4x-fail.stdout  4x-pass.stdout
klasp/tests/fixtures/pytest/: 6x-version.stdout  7x-fail.junit.xml  7x-fail.stdout  7x-pass.stdout  7x-version.stdout  8x-fail.junit.xml  8x-fail.stdout  8x-pass.stdout  8x-version.stdout
klasp/tests/fixtures/trigger/: user-trigger-gh-pr.toml  user-trigger-jj-push.toml
npm/: README.md  index.js  package.json
npm/darwin-arm64/: .gitignore  README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/klasp/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64/: README.md  package.json
pypi/: README.md  pyproject.toml
pypi/src/klasp/: __init__.py
scripts/: bump-npm-versions.mjs  bump-source-versions.mjs  bump-versions.mjs  check-agent-surfaces.mjs  check-version-sync.mjs  gen-agent-surfaces.mjs  test-bump-source-versions.mjs  verify-surface-proofs.mjs
src/: main.rs
