[workspace]
resolver = "2"
members = [
    "klasp",
    "klasp-core",
    "klasp-agents-claude",
    "klasp-agents-codex",
    "klasp-agents-aider",
]
# examples/ contains forkable reference plugins that are intentionally
# outside the workspace — they demonstrate third-party plugin authoring
# without depending on klasp-core. Each subdirectory is its own crate.
exclude = ["examples/*"]

[workspace.package]
version = "0.2.5"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/klasp-dev/klasp"
homepage = "https://klasp.dev"
authors = ["klasp authors"]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
regex = "1"
which = "6"
tempfile = "3"
serde_yaml_ng = "0.10"
