[workspace]
resolver = "2"
members = [
    "klasp",
    "klasp-core",
    "klasp-agents-claude",
    "klasp-agents-codex",
    "klasp-agents-aider",
]
# examples/ contains forkable reference plugins that are intentionally
# outside the workspace — they demonstrate third-party plugin authoring
# without depending on klasp-core. Each subdirectory is its own crate.
exclude = ["examples/*"]

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/klasp-dev/klasp"
homepage = "https://klasp.dev"
authors = ["klasp authors"]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
# preserve_order is workspace-wide because klasp/src/output/json.rs requires
# stable field ordering for the v1 KLASP_OUTPUT_SCHEMA contract. SARIF/JUnit
# tests compare structurally so they're unaffected; SARIF user-facing output
# now reflects insertion order rather than alphabetised, which SARIF parsers
# don't care about.
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
regex = "1"
which = "6"
tempfile = "3"
serde_yaml_ng = "0.10"
