[package]
name = "klasp-agents-aider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Aider agent surface for klasp — edits .aider.conf.yml commit-cmd-pre to invoke the gate."
documentation = "https://docs.rs/klasp-agents-aider"
readme = "../README.md"
keywords = ["ai", "agents", "aider", "klasp"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
klasp-core = { path = "../klasp-core", version = "0.4.0" }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
