[package]
name = "klasp-agents-claude"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Claude Code agent surface for klasp — installs the PreToolUse hook that gates AI commits."
documentation = "https://docs.rs/klasp-agents-claude"
# NOTE: README.md is a copy of the root README.md kept here so `cargo package`
# and docs.rs resolve it from within this crate directory. Keep in sync with
# the root README.md when updating project-level documentation.
readme = "README.md"
keywords = ["ai", "agents", "claude-code", "klasp"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
klasp-core = { path = "../klasp-core", version = "0.3.0" }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
tempfile = { workspace = true }
