[package]
name = "klasp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Block AI coding agents on the same quality gates your humans hit. See https://github.com/klasp-dev/klasp"
documentation = "https://docs.rs/klasp"
readme = "../README.md"
keywords = ["ai", "agents", "git-hooks", "pre-commit", "quality"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
klasp-core = { path = "../klasp-core", version = "0.3.0" }
klasp-agents-claude = { path = "../klasp-agents-claude", version = "0.3.0" }
klasp-agents-codex = { path = "../klasp-agents-codex", version = "0.3.0" }
klasp-agents-aider = { path = "../klasp-agents-aider", version = "0.3.0" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }
quick-xml = "0.37"
rayon = "1.10"
