[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "klasp"
version = "0.0.0"
description = "Placeholder for klasp — block AI coding agents on the same quality gates your humans hit."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["ai", "agents", "git-hooks", "pre-commit", "quality"]
authors = [{ name = "klasp authors" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://klasp.dev"
Repository = "https://github.com/klasp-dev/klasp"
Issues = "https://github.com/klasp-dev/klasp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/klasp"]

[tool.hatch.build.targets.sdist]
include = ["src/klasp", "README.md", "pyproject.toml"]
