# This empty [workspace] table opts this crate out of the parent klasp workspace.
# It is intentionally standalone so third-party plugin authors can fork this
# directory into their own repository without carrying any klasp workspace
# dependencies.
[workspace]

[package]
name = "klasp-plugin-agentic-flow"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Reference plugin for klasp — audits agentic-flow workflow receipts and speaks the v0 plugin protocol"
license = "Apache-2.0"
repository = "https://github.com/klasp-dev/klasp"
# Reference plugin: fork the directory into your own repo before publishing.
publish = false

# This crate is intentionally NOT a member of the klasp workspace.
# See the root Cargo.toml [workspace] exclude = ["examples/*"] comment.
# Plugin authors should fork this directory into their own repo.

[[bin]]
name = "klasp-plugin-agentic-flow"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
sha2 = "0.10"
# serde_yaml is unmaintained; serde_yaml_ng is the maintained drop-in fork the
# klasp workspace itself uses. It reads flow.yaml with the same API.
serde_yaml_ng = "0.10"

[dev-dependencies]
tempfile = "3"
